Fix Portal button visibility issue

--- a/assets/css/misc/portal.css
+++ b/assets/css/misc/portal.css
@@ -1,3 +1,3 @@
 .home-template.with-full-cover:not(.portal-visible) .gh-portal-triggerbtn-iframe {
-    opacity: 0;
+    opacity: 0 !important;
 }
